App improvements / basic webapp

--- a/ANDROID_APP/app/src/main/AndroidManifest.xml
+++ b/ANDROID_APP/app/src/main/AndroidManifest.xml
@@ -11,10 +11,11 @@
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".TimerActivity"
+            android:exported="true" />
+        <activity
             android:name=".CodeInput"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".BaseActivity"
             android:exported="true" />
@@ -39,11 +40,11 @@
             android:name="com.google.android.actions"
             android:resource="@xml/actions" />
     </application>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
-
     <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
 </manifest>
