--- a/ANDROID_APP/app/build.gradle
+++ b/ANDROID_APP/app/build.gradle
@@ -5,7 +5,6 @@ plugins {
 
 android {
     compileSdk 30
-
     defaultConfig {
         applicationId "io.github.reedkrawiec.Buzz"
         minSdk 25
@@ -34,7 +33,7 @@ android {
 }
 
 dependencies {
-
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
