--- a/WEB_APP/front_end/package.json
+++ b/WEB_APP/front_end/package.json
@@ -2,7 +2,7 @@
   "name": "front_end",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://dev.reed.codes/buzz",
+  "homepage":"https://buzz.reed.codes",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
