--- a/WEB_APP/front_end/package.json
+++ b/WEB_APP/front_end/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build-dev": "react-scripts build && cp -r ./build ../back_end/static",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
